--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <script>
         // URL del CSV (sostituisci con il tuo URL di Google Sheets)
-        const CSV_URL = 'https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/export?format=csv&gid=0';
+        const CSV_URL = 'https://docs.google.com/spreadsheets/d/1mcH4SlJU55BHwvimaVSHG-9B_tY0J2O5uxsuAi-n5eg/export?format=csv';
         
         // Dati di esempio per testing (rimuovi quando hai il CSV reale)
         const SAMPLE_DATA = [
