--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                 <div class="stat-icon">⭐</div>
                 <div class="stat-number" id="avgSatisfaction">0</div>
                 <div class="stat-label">Soddisfazione Media</div>
-                <div class="stat-trend" id="satisfactionTrend">Su scala 1-5</div>
+                <div class="stat-trend trend-positive" id="satisfactionTrend">Su scala 1-5</div>
             </div>
             <div class="stat-card">
                 <div class="stat-icon">🧠</div>
@@ -587,7 +587,7 @@
                 <div class="stat-icon">💼</div>
                 <div class="stat-number" id="companyInvestment">0%</div>
                 <div class="stat-label">Aziende Investono</div>
-                <div class="stat-trend" id="investmentTrend">Budget dedicato</div>
+                <div class="stat-trend trend-positive" id="investmentTrend">Budget dedicato</div>
             </div>
         </div>
 
